--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mediaquery.css">
+    <link rel="stylesheet" href="./css/mediaquery-tablet.css">
 
     <title>Project Login</title>
 </head>
@@ -43,10 +45,10 @@
 
 
                 <!-- Buttons -->
-                <p>
+                <p class = "buttonLoginP">
                     <button class = "buttonLogin" id = "buttonLoginId">Log In</button>
                 </p>
-                <p>
+                <p class = "buttonForgotP">
                     <a href="./html/forgot.html"><button class = "buttonForgot" id = "buttonForgotId">I Forgot</button></a>
                 </p>
                 
