--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel = "stylesheet" href = "./css/style.css">
+    <link rel = "stylesheet" href = "./css/media-query.css">
 
     <title>Project Login</title>
 </head>
